--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+html {
+  font-size: 62.5%;
 }
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-color: hsl(233, 47%, 7%);
   font-family: "Inter", sans-serif;
+  font-size: 1.5rem;
 }
 .main-div {
-  max-width: 60rem;
+  max-width: 100rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 .text-section {
-  width: 50%;
   background-color: hsl(244, 38%, 16%);
-  padding: 4rem;
+  padding: 6rem;
+  max-height: 100%;
 }
 .main-heading,
 .stats-heading {
@@ -26,31 +29,36 @@ body {
 .stats,
 .main-paragraph {
   color: hsla(0, 0%, 100%, 0.75);
-  font-size: 0.8rem;
+  font-size: 1.6rem;
 }
 .main-heading {
-  font-size: 1.8rem;
+  font-size: 3rem;
+}
+.stats-heading {
+  font-size: 2.5rem;
 }
 .stats {
   margin-top: 4rem;
-  justify-content: space-between;
-  width: 80%;
-  font-size: 1.2rem;
+  font-size: 2rem;
+  gap: 4.5rem;
 }
 .main-paragraph {
   margin-top: 1.8rem;
-  line-height: 2;
+  line-height: 1.5;
 }
 .stat-name {
-  font-size: 0.6rem;
+  font-size: 1.2rem;
   letter-spacing: 0.2em;
   margin-top: 0.5em;
 }
-.staff-image {
-  background-image: url("./images/image-header-desktop.jpg");
-  width: 50%;
+.image-section {
   background-color: hsl(277, 64%, 61%);
 }
-.staff-image::after {
-  content: "";
+.staff-img {
+  opacity: 0.8;
+  display: block;
+  mix-blend-mode: multiply;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
