--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   max-width: 100rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border-radius: 1rem;
+  border-radius: 0.8rem;
   overflow: hidden;
 }
 .text-section {
@@ -35,10 +35,10 @@ body {
   font-size: 3rem;
 }
 .stats-heading {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
 }
 .stats {
-  margin-top: 4rem;
+  margin-top: 7rem;
   font-size: 2rem;
   gap: 4.5rem;
 }
@@ -58,7 +58,7 @@ body {
   opacity: 0.8;
   display: block;
   mix-blend-mode: multiply;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
